# Kea_SOFT_System_Integration_2025_Spring-Navid

./: .gitignore  README.adoc  package-lock.json  package.json
02._Text-based_Data_Formats/: example.csv  example.json  example.txt  example.xml  example.yaml  paymentiframe.html
03._Modules/html_classic/: index.html
03._Modules/html_esmodules/: index.html
03._Modules/node_commonjs/: index.js
03._Modules/python_main/: potential_library.py
04._encode_decode/01._node/: index.js
04._encode_decode/02._python/: encode_decode.py
05._Python_Virtua_Enviroments/: main.py
05._Python_Virtua_Enviroments/03._poetry/: pyproject.toml
06._simple_servers/01._node/: app.js
06._simple_servers/02._python/: main.py  pyproject.toml
06._simple_servers/03._test/: app.js  package-lock.json  package.json
08._server-server/01._node/: app.js  documentation.md  package-lock.json  package.json
08._server-server/02._python/: main.py  pyproject.toml
09._Enviroment_variables/01._node/: index.js  package-lock.json  package.json
09._Enviroment_variables/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js
12._Long_Polling/01._node/: app.js
13._Server-side_events/01._node/: app.js
14._WebSocket/01._node/: app.js  package.json
15._OpenAPI/01._node/: app.js  package.json
15._OpenAPI/02._python/: main.py  pyproject.toml
16._WebRTC/01._WebRTC_browser_sdp/: package.json
17._Database_Migrations/: 20250403101413_mro_migration.js  docker-compose.yml  mydatabase_mro_docs.html  mysqldump.sql
17._Database_Migrations/02._python_alembic/: pyproject.toml
17._Database_Migrations/02._python_alembic/alembic/versions/: 3187093c293e_create_accounts_table.py
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package-lock.json  package.json
23._Embedded_Youtube/: index.html
27._WebScraping_WebCrawling/02._python/: main.py  pyproject.toml
27._WebScraping_WebCrawling/04._python_scrapy_basic/: WikiPageSpider.py  pyproject.toml
mandatory_assignments/: README.MD
mandatory_assignments/03._data_parsing_server_3/02._python/: data_parser.py  main.py  pyproject.toml
(+134 files in other folders)
